--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
                 <p><a class="btn btn-primary btn-lg" href="/clients" role="button">Back to Client Dashboard</a></p>
               <% elsif session[:company_id] %>
                 </p>
-                <p><a class="btn btn-primary btn-lg" href="/clients" role="button">Back to Client Dashboard</a></p>
+                <p><a class="btn btn-primary btn-lg" href="/companies" role="button">Back to Company Dashboard</a></p>
               <% else %>
                 Join Today!</p>
                 <p><a class="btn btn-primary btn-lg" href="/register" role="button">Register Now &raquo;</a></p>
