--- a/app/views/dashboards/_dashboard_paid.html.erb
+++ b/app/views/dashboards/_dashboard_paid.html.erb
@@ -38,10 +38,12 @@
 				<% end %>
 			</td>
 			<td class="text-right">
-				<button class="btn btn-primary btn-sm" data-toggle="edit_modal<%= paid.id %>" data-target="#Invoice<%= paid.id %>"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Invoice
-				</button>
-				<button class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Invoice
-				</button>
+				<button class="btn btn-primary btn-sm" data-toggle="edit_modal<%= paid.id %>" data-target="#Invoice<%= paid.id %>"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Invoice</button>
+				<button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteInvoiceModal<%= paid.id %>"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Invoice</button>
+
+
+				<%= render partial: "dashboard_deleteInvoice", locals: { paid: paid } %>
+
 			</td>
 		</tr>
 		<% end %>
