Updated minor changes with updating company info

--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -23,6 +23,10 @@
 				<input type="text" name="name" class="form-control" value="<%= @client.name %>">
 			</div>
 			<div class="form-group">
+			<label>Email: </label>
+				<input type="text" name="email" class="form-control" value="<%= @client.email %>">
+			</div>
+			<div class="form-group">
 				<label>Address: </label>
 				<input type="text" name="address_line1" class="form-control" value="<%= @client.address_line1%>">
 			</div>
