--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -17,6 +17,10 @@
 					<input type="text" name="name" class="form-control" value="<%= @company.name %>">
 			</div>
 			<div class="form-group">
+				<label>Email: </label>
+					<input type="text" class="form-control" name="email" value="<%= @company.email%>">
+			</div>
+			<div class="form-group">
 				<label>Address Line 1: </label>
 					<input type="text" class="form-control" name="address_line1" value="<%= @company.address_line1%>">
 			</div>
