--- a/app/views/dashboards/_dashboard_addCheck.html.erb
+++ b/app/views/dashboards/_dashboard_addCheck.html.erb
@@ -19,7 +19,7 @@
 		    <% end %>
 		    </div>
 
-	    	<form action="/invoices/add/<%= unpaid.client.id %>" method="post">
+	    	<form action="/invoices/add/<%= unpaid.id %>" method="post">
     		
 	    	<div class="form-horizontal">
 	    		<div class="form-group">
