--- a/app/views/dashboards/_dashboard_addinvoice.html.erb
+++ b/app/views/dashboards/_dashboard_addinvoice.html.erb
@@ -56,7 +56,7 @@
 		    		<div class="form-group">
 		    			<label class="col-sm-3 control-label">Amount</label>
 			    		<div class="col-sm-8">
-	                        <input type="number" step="0.01" min=0 class="form-control" name="invoice[amount]" placeholder="$" />
+	                        <input type="float" step="0.01" min=0 class="form-control" name="invoice[amount]" placeholder="$" />
 	                    </div>
 		    		</div>
 		    	</div>
