Adding reports to clients

--- a/app/views/application/_nav_basic.html.erb
+++ b/app/views/application/_nav_basic.html.erb
@@ -52,7 +52,7 @@
             <div class="form-group">
               <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Sign in</button>
           </form>
 
         <% end %>
