--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -7,7 +7,7 @@
 
 	<a href="/companies/edit" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Company</a> 
 
-	<a href="/companies/reports" class="btn btn-lg btn-success">Reports</a> 
+	<a href="/companies/reports" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Reports</a> 
 </div>
 
 <%= render "dashboard_listing" %>
