--- a/app/views/dashboards/_dashboard_unpaid.html.erb
+++ b/app/views/dashboards/_dashboard_unpaid.html.erb
@@ -39,8 +39,8 @@
 				<button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteUnpaidInvoice<%= unpaid.id %>"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Invoice</button>
 
 				<%= render partial: "dashboard_deleteUnpaidInvoice", locals: { unpaid: unpaid } %>
+				<%= render partial: "dashboard_addCheck", locals: { unpaid: unpaid } %>
 			</td>
-			<td><%= render partial: "dashboard_addCheck", locals: { unpaid: unpaid } %></td>
 		</tr>
 	</tbody>
 	<% end %>
