--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -22,7 +22,7 @@
 	<% if session[:client_id] %>
 	  <div class="row">
 	  	<div class="col-md-12 text-center">
-			<a href="/clients/edit" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit My Info</a> 
+			<a href="/clients/<%= @client.id %>/edit" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit My Info</a> 
 
 			<a href="/clients/reports" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Reports</a> 
 		</div>
