--- a/app/views/dashboards/_dashboard_addCheck.html.erb
+++ b/app/views/dashboards/_dashboard_addCheck.html.erb
@@ -33,12 +33,12 @@
 	    	<input type="hidden" name="date" value="<%= Date.today %>">
 
 			<div class="modal-footer">
-		    <a href="">
-			    	<%= token_tag nil %>
-			    	<button type="submit" class="btn btn-warning center-block"> Cancel <span aria-hidden="true"></span></button></a>
+
 			    	<%= token_tag nil %>
 					<input type="hidden" name="_method" value="patch">
-			    	<button type="submit" class="btn btn-success center-block"> Add <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+			    	<button type="submit" class="btn btn-success"> Add Check<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+
+			    	<button type="submit" class="btn btn-default "> Cancel <span aria-hidden="true"></span></button>
 			    </div>
 		    </form>
 		</div>
