--- a/app/views/dashboards/_dashboard_deleteUnpaidInvoice.html.erb
+++ b/app/views/dashboards/_dashboard_deleteUnpaidInvoice.html.erb
@@ -4,7 +4,7 @@
 	    <div class="modal-content">
 		    <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Delete Invoice</h4>
+		        <h4 class="modal-title text-center" id="myModalLabel">Delete Invoice</h4>
 		    </div>
 		   
 		    <div class="modal-body">
@@ -20,20 +20,20 @@
 		    </div>
 
 	    		
-<div class="alert alert-danger">
-  <strong>Warning!</strong> Are you sure you want to delete invoice #<%= unpaid.id %> for <%= unpaid.client.name %>?
+<div class="alert alert-danger text-center" role="alert">
+  <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span> Warning!</strong> Are you sure you want to delete invoice #<%= unpaid.id %> for <%= unpaid.client.name %>?<br /> This CANNOT be undone!
 </div>
 
-				<div class="modal-footer">
-		    <a href="">
-			    	<%= token_tag nil %>
-			    	<button type="submit" class="btn btn-warning center-block"> No <span aria-hidden="true"></span></button></a>
-	    	<form action="/invoices/<%= unpaid.id %>" method="post">
+				<div class="modal-footer text-center">
+
+		    	<form action="/invoices/<%= unpaid.id %>" method="post" style="display: inline-block">
 			    	<%= token_tag nil %>
 					<input type="hidden" name="_method" value="delete">
-			    	<button type="submit" class="btn btn-danger center-block"> Yes <span class="glyphicon glyphicon" aria-hidden="true"></span></button>
-			    </div>
-		    </form>
+			    	<button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Yes</button>
+			    </form>
+
+		    	<button type="submit" class="btn btn-default"> No (Cancel)<span aria-hidden="true"></span></button>
+			</div>
 		</div>
     </div>
 </div><!-- Modal End -->
