--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,12 +5,8 @@
 	</ol>
 <% end %>
 
-	<h1 class="text-center"><%= @company.name %></h1>
-	<h2 class="text-center">Reports</h2>
-
-
 <div style="row">
-	<div class="col-md-8 col-md-offset-2" style="font-size: larger">
+	<div class="col-md-8" style="font-size: larger">
 		<ul class="nav nav-pills">
 		  <li role="report_yearly" class="disabled" style="min-width: 215px"><a href="#">Yearly Earnings: </a></li>
 		  <li role="report_yearly"><a href="/companies/reports/year/2015">2015</a></li>
@@ -20,7 +16,7 @@
 </div>
 
 <div style="row">
-	<div class="col-md-8 col-md-offset-2" style="font-size: larger">
+	<div class="col-md-8" style="font-size: larger">
 		<ul class="nav nav-pills">
 		  <li role="report_quarterly" class="disabled" style="min-width: 215px"><a href="#">2016 Quarterly Earnings: </a></li>
 		  <li role="report_quarterly"><a href="/companies/reports/1st">1st Quarter</a></li>
@@ -31,39 +27,45 @@
 	</div>
 </div>
 
+<div id="print_reports">
+		<h1 class="text-center"><%= @company.name %></h1>
+		<h2 class="text-center">Reports</h2>
 
+	<% if @invoices == [] %>
+		<h3 style="text-center">You currently have no paid Invoices.</h3>
+	<% else %>
 
-<% if @invoices == [] %>
-	<h3 style="text-center">You currently have no paid Invoices.</h3>
-<% else %>
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th>Client Name</th>
-			<th>Date Paid</th>
-			<th>Payment Info</th>
-			<th>Amount Paid</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @invoices.each do |paid| %>
-		<tr>
-			<td><%= paid.client.name %></td>
-			<td><%= paid.paid_date %></td>
-			<td>
-				<% if paid.check_payment %>
-					<span class="label label-info">Check #:</span> <%= paid.stripe_payment %>
-				<% elsif paid.stripe_payment %>
-					<span class="label label-info">Stripe ID:</span> <%= paid.stripe_payment %>
-				<% end %>
-			</td>
-			<td>$<%= paid.amount %></td>
-		</tr>
-		<% end %>
-		<tr>
-			<td colspan="3" class="text-right">Total Earnings: </td>
-			<td style="font-weight: bold">$<%= @total %></td>
-		</tr>
-	</tbody>
-</table>
-<% end %>
+	<table class="table table-hover">
+		<thead>
+			<tr>
+				<th>Client Name</th>
+				<th>Date Paid</th>
+				<th>Payment Info</th>
+				<th>Amount Paid</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @invoices.each do |paid| %>
+			<tr>
+				<td><%= paid.client.name %></td>
+				<td><%= paid.paid_date %></td>
+				<td>
+					<% if paid.check_payment %>
+						<span class="label label-info">Check #:</span> <%= paid.stripe_payment %>
+					<% elsif paid.stripe_payment %>
+						<span class="label label-info">Stripe ID:</span> <%= paid.stripe_payment %>
+					<% end %>
+				</td>
+				<td>$<%= paid.amount %></td>
+			</tr>
+			<% end %>
+			<tr>
+				<td colspan="3" class="text-right">Total Earnings: </td>
+				<td style="font-weight: bold">$<%= @total %></td>
+			</tr>
+		</tbody>
+	</table>
+	<% end %>
+</div>
+
+<a href="#" onclick="window.print();return false;" class="btn btn-print btn-md" type="button"><span class="glyphicon glyphicon-print" aria-hidden="true"></span> Print Report</a>	
