--- a/app/views/reports/oneq.html.erb
+++ b/app/views/reports/oneq.html.erb
@@ -2,12 +2,9 @@
 	<h1> <span style="color:#73C5E8"><%= @company.name %></span> Reports</h1>
 </div>
 
+
 <div class="text-center">
-	<h3>Total Paid Invoice for 2016: <span style="color:#1AC262"><%= @total %></span></h3>
-	<h3>1st Quarter for 2016: <span style="color:#D5D412"><%= @total1 %></span></h3>
-</div>
-<div class="text-center">
-	<h4>Quaterly: 
+	<h4>Quarterly: 
 	<a href="/companies/reports" class="btn btn-sm btn-danger">Yearly</a> 
 	<a href="/companies/reports/2nd" class="btn btn-sm btn-warning">2nd</a> 
 	<a href="/companies/reports/3rd" class="btn btn-sm btn-warning">3rd</a> 
@@ -15,9 +12,16 @@
 	</h4>
 </div>
 
+
+<div class="text-center">
+	<h3>Total Paid Invoice for 2016: <span style="color:#1AC262"><%= @total %></span></h3>
+	<h3>1st Quarter for 2016: <span style="color:#D5D412"><%= @total1 %></span></h3>
+</div>
+
 <% if @invoices == [] %>
 	<h3>You currently have no paid Invoices.</h3>
 <% else %>
+
 <table class="table table-striped">
 
 	<thead>
