Updated formating for Reports section

--- a/app/views/reports/year.html.erb
+++ b/app/views/reports/year.html.erb
@@ -41,7 +41,7 @@
 			  <li role="report_quarterly"><a href="/companies/reports/quarter/<%=params[:id] %>/4">4th Quarter</a></li>
 			</ul>
 		</div>
-
+	</div>
 <div id="print_reports">
 	<h1 class="text-center"><%= @current_user.name %></h1>
 	<h2 class="text-center">Year <%= params[:id]%> Report</h2>
