--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,3 +1,3 @@
-<h2>Your payment of <strong><%= number_to_currency@invoice_amt %></strong> has been confirmed! Thank you!</h2>
+<h2 class="text-center">Your payment of <strong><%= number_to_currency@invoice_amt %></strong> has been confirmed! Thank you!</h2>
 
-<a href="/clients/#{session[:client_id]}">Back to Your Dashboard</a>
+<a href="/clients/" class="btn btn-lg btn-warning text-center center-block">Back to Your Dashboard</a>
