--- a/app/views/dashboards/_dashboard_addCheck.html.erb
+++ b/app/views/dashboards/_dashboard_addCheck.html.erb
@@ -4,7 +4,7 @@
 	    <div class="modal-content">
 		    <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Add Check</h4>
+		        <h4 class="modal-title text-center" id="myModalLabel">Add Check</h4>
 		    </div>
 		   
 		    <div class="modal-body">
@@ -36,9 +36,9 @@
 
 			    	<%= token_tag nil %>
 					<input type="hidden" name="_method" value="patch">
-			    	<button type="submit" class="btn btn-success"> Add Check<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+			    	<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Check</button>
 
-			    	<button type="submit" class="btn btn-default "> Cancel <span aria-hidden="true"></span></button>
+			    	<button data-dismiss="modal" aria-label="Close" class="btn btn-default "> Cancel <span aria-hidden="true"></span></button>
 			    </div>
 		    </form>
 		</div>
