--- a/app/views/dashboards/_dashboard_deleteClient.html.erb
+++ b/app/views/dashboards/_dashboard_deleteClient.html.erb
@@ -4,7 +4,7 @@
 	    <div class="modal-content">
 		    <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Delete Client <%= client.name %></h4>
+		        <h4 class="modal-titl text-center" id="myModalLabel">Delete Client <%= client.name %></h4>
 		    </div>
 		   
 		    <div class="modal-body">
@@ -37,7 +37,7 @@
 						<input type="hidden" name="_method" value="delete">
 				    	<button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Yes</button>
 			    </form>
-			    <button type="submit" class="btn btn-default"> No (Cancel) <span aria-hidden="true"></span></button>
+			    <button data-dismiss="modal" aria-label="Close"  class="btn btn-default"> No (Cancel) <span aria-hidden="true"></span></button>
 		    </div>
 		</div>
     </div>
