--- a/app/views/dashboards/_dashboard_deleteUnpaidInvoice.html.erb
+++ b/app/views/dashboards/_dashboard_deleteUnpaidInvoice.html.erb
@@ -32,7 +32,8 @@
 			    	<button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Yes</button>
 			    </form>
 
-		    	<button type="submit" class="btn btn-default"> No (Cancel)<span aria-hidden="true"></span></button>
+		    	<button data-dismiss="modal" aria-label="Close"  class="btn btn-default"> No (Cancel)<span aria-hidden="true"></span></button>
+		    </div>
 			</div>
 		</div>
     </div>
