Minor merge changes

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,7 +1,7 @@
 <h2 class="text-center">Your payment of <strong><%= number_to_currency@invoice_amt %></strong> has been confirmed! Thank you!</h2>
 
-<<<<<<< HEAD
-<a href="/clients/" class="btn btn-lg btn-warning text-center center-block">Back to Your Dashboard</a>
-=======
-<a href="/clients">Back to Your Dashboard</a>
->>>>>>> be1e1ef6fc5e19980ac8e36fbf474164d596ffee
+
+<div class="row text-center">
+	<a href="/clients/" class="btn btn-lg btn-warning text-center">Back to Your Dashboard</a>
+</div>
+
