--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -31,7 +31,8 @@
 	<h4>Mailing Address:</h4>
 	<address>
 		<%= @client.name %><br />
-		<%= @client.address_line1 + " " + @client.address_line2%><br />	
+		<%= @client.address_line1 %> <%= @client.address_line2 %>
+		<br />
 		<%= @client.city %>, <%= @client.state %> <%= @client.zip %>
 	</address>
 
